--- a/assets/templates/root.html
+++ b/assets/templates/root.html
@@ -16,6 +16,7 @@
     <section-loader-ajax></section-loader-ajax>
     <section-loader></section-loader>
     <section-progress></section-progress>
+    <photo-upload></photo-upload>
 
     <app-sections>
         <resume-stat></resume-stat>
@@ -23,7 +24,6 @@
 
         <section-profile></section-profile>
         <section-profile-data></section-profile-data>
-        <photo-upload></photo-upload>
 
         <ui-dropmenu></ui-dropmenu>
     </app-sections>
@@ -31,6 +31,7 @@
     <app-offers>
         <offer-welcome></offer-welcome>
         <offer-plan></offer-plan>
+        <offer-premium></offer-premium>
         <offer-votes></offer-votes>
         <offer-jqtest></offer-jqtest>
     </app-offers>
@@ -105,6 +106,7 @@
             offers: {
                 welcome: $root.tags["offer-welcome"],
                 plan: $root.tags["offer-plan"],
+                premium: $root.tags["offer-premium"],
                 jqtest: $root.tags["offer-jqtest"],
                 votes: $root.tags["offer-votes"]
             },
