--- a/assets/templates/sections/profile/mobile/profileData.html
+++ b/assets/templates/sections/profile/mobile/profileData.html
@@ -80,7 +80,7 @@
     };
 
     $.onSave = function(){
-        $account.saveData($.data, function(){
+        $account.onSaveData($.data, function(){
             $.hide();
         });
     };
