--- a/assets/templates/sections/profile/profile.html
+++ b/assets/templates/sections/profile/profile.html
@@ -160,7 +160,7 @@
 
     $.open = {
         changePhoto: function(){
-            $account.changePhoto();
+            $account.onPhotoUpload();
         },
         personalData: function(){
             $Sections.profile.data.show();
