--- a/assets/templates/sections/profile/profileData.html
+++ b/assets/templates/sections/profile/profileData.html
@@ -59,7 +59,7 @@
     };
 
     $.onSave = function(){
-        $account.saveData($.data, function(){
+        $account.onSaveData($.data, function(){
             $.hide();
         });
     };
