--- a/views/premiumView.html
+++ b/views/premiumView.html
@@ -39,9 +39,9 @@
 
     <script src="/assets/js/libs.js"></script>
     <script src="/assets/js/premium/app.build.js"></script>
-    <script src="/assets/templates/appResume/premium/templates/template1.html" type="riot/tag"></script>
+    <!-- <script src="/assets/templates/appResume/premium/templates/template1.html" type="riot/tag"></script>
     <script src="/assets/js/store/resume/premium/resume.demo.js"></script>
-    <script src="/assets/js/store/resume/commons/resume.js"></script>
+    <script src="/assets/js/store/resume/commons/resume.js"></script> -->
     <script src="/public/js/resume/config.js"></script>
 
 {% if resume %}
