--- a/views/private.html
+++ b/views/private.html
@@ -101,6 +101,8 @@
     <script src="/assets/templates/ui/icons/social/icon-gl.tag" type="riot/tag"></script> -->
     <script src="/assets/js/templates.ui.js"></script>
     <script src="/assets/js/templates.sections.js"></script>
+    <script src="/assets/templates/sections/list/resume/resumeSection.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/offers/premium.html" type="riot/tag"></script>
 
     <!--/ JS components (commons) /-->
     <!-- <script src="/assets/js/components/commons/app.js"></script>
@@ -135,6 +137,7 @@
     <script src="/assets/js/plugins/tutorial/welcome.js"></script>
     <script src="/assets/js/plugins/tutorial/resumeFree.js"></script> -->
     <script src="/assets/js/plugins.js"></script>
+    <script src="/assets/js/plugins/sections.js"></script>
 
     <!--/ JS components (store) /-->
     <script src="/assets/js/store/account.js"></script>
