--- a/views/private.html
+++ b/views/private.html
@@ -101,8 +101,12 @@
     <script src="/assets/templates/ui/icons/social/icon-gl.tag" type="riot/tag"></script> -->
     <script src="/assets/js/templates.ui.js"></script>
     <script src="/assets/js/templates.sections.js"></script>
+    <script src="/assets/templates/sections/popup/premium.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/popup/jqtest.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/list/resumeList.html" type="riot/tag"></script>
     <script src="/assets/templates/sections/list/resume/resumeSection.html" type="riot/tag"></script>
     <script src="/assets/templates/sections/offers/premium.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/offers/votes.html" type="riot/tag"></script>
 
     <!--/ JS components (commons) /-->
     <!-- <script src="/assets/js/components/commons/app.js"></script>
@@ -166,6 +170,7 @@
     <script src="/assets/js/jqtest/jq4.js"></script>
     <script src="/assets/js/jqtest/jq5.js"></script>
     <script src="/assets/js/jqtest/jq6.js"></script> -->
+    <script src="/assets/js/components/commons/metrika.js"></script>
     <script src="/assets/js/components/init.js"></script>
 
     <!-- <script src="/assets/js/libs.js"></script>
