--- a/assets/templates/sections/list/resume/resumeSection.html
+++ b/assets/templates/sections/list/resume/resumeSection.html
@@ -200,7 +200,7 @@
             })
         },
         stat: function(){
-            $Sections.resume.stat.show();
+            $Sections.resume.stat.show($.item.get('_id'));
         },
         design: {
             free: function(){
