--- a/assets/templates/sections/list/resumeList.html
+++ b/assets/templates/sections/list/resumeList.html
@@ -117,7 +117,7 @@
         },
         stat: function(){
             $.hide();
-            $Sections.resume.stat.show(function(){
+            $Sections.resume.stat.show(this.item._id, function(){
                 $.show();
             });
         },
