--- a/views/private.html
+++ b/views/private.html
@@ -107,6 +107,7 @@
     <script src="/assets/templates/sections/list/resume/resumeSection.html" type="riot/tag"></script>
     <script src="/assets/templates/sections/offers/premium.html" type="riot/tag"></script>
     <script src="/assets/templates/sections/offers/votes.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/stat/resumeStat.html" type="riot/tag"></script>
 
     <!--/ JS components (commons) /-->
     <!-- <script src="/assets/js/components/commons/app.js"></script>
